[package]
name = "ark-noname"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-r1cs-std = { git = "https://github.com/winderica/r1cs-std", branch="cherry-pick" }
noname = { path = "/Users/pierredm/repos/forks/dmpierre/noname/" }
ark-relations = "0.4.0"
ark-ff = "0.4"
num-bigint = "0.4.5"
ark-bn254 = "0.4.0"


